--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <h2 class="presentacion_descripcion">Descubre el Paraíso Dominicano con nosotros. Somos una
                     agencia de viajes urbanos y paseos turísticos, tu Puerta a las Mejores Aventuras en el País.</h2>
                 <div class="presentacion_contacto">
-                    <a class="presentacion--link" href="#footer">Contáctanos</a>
+                    <a class="presentacion--link" href="#contactanos">Contáctanos</a>
                 </div>
             </div>
             <div class="presentacion_contenedor--derecho">
