--- a/excursiones.html
+++ b/excursiones.html
@@ -160,6 +160,39 @@
                     </div>
                 </div>
             </div>
+
+
+
+
+
+
+            <div class="excursion_fotos excursion_fotos-3">
+                <h2>Excursiones de <span>Zipline</span></h2>
+                <div class="contenedor_fotos-excursiones elemento">
+                    <img class="fotos_excursiones-img" src="./recursos/fotos/Excursiones/zip-line/8.webp" alt="foto excursion">
+                    <div class="overlay">
+                        <p class="fotos_excursiones-texto">¿Te atreverías a surcar valles a 55 km/h? El Zipline en Punta Cana es 
+                            emocionante y memorable. Una experiencia imperdible que añadirá emoción a tu viaje caribeño. 
+                            <span>¡Explora la emoción en estado puro!</span></p>
+                    </div>
+                </div>
+                <div class="contenedor_fotos-excursiones elemento">
+                    <img class="fotos_excursiones-img" src="./recursos/fotos/Excursiones/zip-line/9.webp" alt="foto excursion">
+                    <div class="overlay">
+                        <p class="fotos_excursiones-texto">¿Te atreverías a surcar valles a 55 km/h? El Zipline en Punta Cana es 
+                            emocionante y memorable. Una experiencia imperdible que añadirá emoción a tu viaje caribeño. 
+                            <span>¡Explora la emoción en estado puro!</span></p>
+                    </div>
+                </div>
+                <div class="contenedor_fotos-excursiones elemento">
+                    <img class="fotos_excursiones-img" src="./recursos/fotos/Excursiones/zip-line/10.webp" alt="foto excursion">
+                    <div class="overlay">
+                        <p class="fotos_excursiones-texto">Te garantizamos que esta aventura te dejará asombrado. Es una de esas 
+                            vivencias que permanecerá grabada en tu memoria, y lo mejor de todo, añadirá un toque inolvidable a 
+                            tu viaje a Punta Cana. <span>¡Anímate a explorar la emoción en estado puro!</span></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
