--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <section id="presentacion">
         <div class="presentacion_contenedor">
             <div class="presentacion_contenedor--izquierdo">
-                <h1 class="presentacion_titulo">Agencia de <span id="changing-text"></span><span class="escritura_parpadeo">|</span><span class="titulo">Dream Country Tour</span></h1>
+                <h1 class="presentacion_titulo">Agencia de <span class="con-salto"></span><span id="changing-text" class="texto_escitura"></span><span class="escritura_parpadeo">|</span><span class="titulo">Dream Country Tour</span></h1>
                 <h2 class="presentacion_descripcion">Descubre el Paraíso Dominicano con nosotros. Somos una
                     agencia de viajes urbanos y paseos turísticos, tu Puerta a las Mejores Aventuras en el País.</h2>
                 <div class="presentacion_contacto">
