Detalles finales acabados

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="presentacion_contenedor--derecho">
-                <img src="./recursos/fotos/DCT-Logo-PNG-min.png" alt="representacion">
+                <img src="./recursos/fotos/DCT-Logo-PNG-min-2.webp" alt="representacion">
             </div>
         </div>
     </section>
